[metadata]
license_file = LICENSE

[flake8]
exclude = .git,__pycache__,docs/source/conf.py,old,build,dist
max-line-length = 88

ignore =
    #Don't require docstrings on magic methods.
    D105,
    #Don't require docstrings for __init__ methods.
    D107
    #Don't require imperative mood docstrings.
    D401,
    W503

[isort]
atomic = true
balanced_wrapping = true
# vertical hanging indent style wrapping
multi_line_output = 3
include_trailing_comma = true
combine_as_imports=True

known_first_party = phial,tests
default_section = THIRDPARTY

[mypy]
mypy_path = stubs
warn_unused_ignores = True
warn_return_any = True

strict_optional = True
no_implicit_optional = True

disallow_any_unimported = True
disallow_subclassing_any = True

disallow_untyped_calls = True
disallow_untyped_defs = True
disallow_incomplete_defs = True
disallow_untyped_decorators = True

check_untyped_defs = True
ignore_missing_imports = False
